- Install capacitor (Add capacitor.config.json) - Add photo.service.ts - Trying to integrate capacitor (not done yet) - Remove TakePhotos (Disabled wajib isi foto) - Fixing Team Activity

--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -18,7 +18,7 @@
     <ion-item>
       <ion-input type="text" placeholder="Alasan Absen Diluar" [(ngModel)]="txtDesc" name="txtDesc" required>
       </ion-input>
-      <ion-icon class="takepicture" (click)="TakePhotos()" name="camera" color="hk-red"></ion-icon>
+      <!-- <ion-icon class="takepicture" (click)="TakePhotos()" name="camera" color="hk-red"></ion-icon> -->
     </ion-item>
 
     <div *ngIf="isArrived">
