Early Edit fitur AKHLAK

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -55,13 +55,17 @@
   </ion-grid>
 
   <div padding>
+    <ion-text>Greetings AKHLAK</ion-text>
+  </div>
+
+  <div padding>
     <ion-text>Activity List</ion-text>
   </div>
 
   <div class="container" padding>
     <div class="scroll" scrollX="true">
-      <img style="padding-right:10px; width: 80%;" (click)="NavRouterMenu(5)" src="../../assets/images/img-11.png" />
-      <img style="padding-right:10px; width: 80%;" (click)="NavRouterMenu(6)" src="../../assets/images/img-12.png" />
+      <img style="padding-right:10px; width: 80%; border-radius: 5px 5px 5px 5px;" (click)="NavRouterMenu(5)" src="../../assets/images/img-11.png" />
+      <img style="padding-right:10px; width: 80%; " (click)="NavRouterMenu(6)" src="../../assets/images/img-12.png" />
     </div>
   </div>
 
