- Bug Fix Akhlak

--- a/src/app/components/form-absen-proyek/form-absen-proyek.component.html
+++ b/src/app/components/form-absen-proyek/form-absen-proyek.component.html
@@ -193,24 +193,23 @@
   </ion-row>
 </ion-card>
 
-<ion-card>
+<ion-card *ngIf="!isArrived">
   <ion-item color="hk-yellow">
-    <!-- <ion-icon name="warning" slot="start"></ion-icon> -->
     <ion-icon name="megaphone" slot="start"></ion-icon>
     <ion-text>AKHLAK BUMN</ion-text>
   </ion-item>
   <div padding>
     <ion-text>1. Amanah</ion-text> <br>
-    <ion-text><span style="margin-left: 20px">Fokus pada sesuatu yang mantap</span></ion-text> <br>
+    <ion-text><span style="margin-left: 20px">Memegang teguh kepercayaan yang diberikan</span></ion-text> <br>
     <ion-text>2. Kompeten</ion-text> <br>
-    <span style="margin-left: 20px">Sesuatu yang luar biasa sekali untuk dipahami</span> <br>
+    <span style="margin-left: 20px">Terus belajar dan mengembangkan kapabilitas</span> <br>
     <ion-text>3. Harmonis</ion-text> <br>
-    <ion-text><span style="margin-left: 20px">Jenis makanan khas manado dengan sambal khusus dipoles rempah-rempah pilihan</span></ion-text> <br>
+    <ion-text><span style="margin-left: 20px">Saling peduli dan menghargai perbedaan</span></ion-text> <br>
     <ion-text>4. Loyal</ion-text> <br>
-    <ion-text><span style="margin-left: 20px">Seperti biasa</span></ion-text> <br>
+    <ion-text><span style="margin-left: 20px">Berdedikasi dan mengutamakan kepentingan Bangsa dan Negara</span></ion-text> <br>
     <ion-text>5. Adaptif</ion-text> <br>
-    <ion-text><span style="margin-left: 20px">Good sekali untuk dimakan</span></ion-text> <br>
+    <ion-text><span style="margin-left: 20px">Terus berinovasi dan antusias dalam menggerakkan ataupun menghadapi perubahan</span></ion-text> <br>
     <ion-text>6. Kolaboratif</ion-text> <br>
-    <ion-text><span style="margin-left: 20px">Salam dari binjai</span></ion-text> <br>
+    <ion-text><span style="margin-left: 20px">Membangun kerjasama yang sinergis</span></ion-text> <br>
   </div>
 </ion-card>
