--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -63,6 +63,7 @@
     <div class="scroll" scrollX="true">
       <img style="width: 100%; border-radius: 5px 5px 5px 5px;" (click)="NavRouterMenu(X)"
         src="../../assets/images/img-XX1.png" /> <span style="padding-left: 10px;"> </span>
+      <img style="width: 80%; border-radius: 5px 5px 5px 5px;" (click)="NavRouterMenu(6)" src="{{ akhlakImage }}" />
     </div>
   </div>
 
