- Fitur foto absen diluar diadakan kembali - AllowEdit = False untuk foto selain iOS - Button Refresh pada halaman homepage - Parameter pada Fungsi refresh dijadikan optional - Page Attendance   1. Penambahan Value & Story AKHLAK (default jika belum isi dan sudah isi) - Welcome Page = penyesuaian untuk android

--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -3,6 +3,7 @@
     <ion-icon name="warning" slot="start"></ion-icon>
     <ion-label class="ion-text-wrap">
       <p>Ketentuan foto : Menggunakan atribut kantor dan memperlihatkan aktifitas kerja.</p>
+      <p>Usahakan posisi kamera landscape.</p>
     </ion-label>
   </ion-item>
 </ion-card>
@@ -18,7 +19,7 @@
     <ion-item>
       <ion-input type="text" placeholder="Alasan Absen Diluar" [(ngModel)]="txtDesc" name="txtDesc" required>
       </ion-input>
-      <!-- <ion-icon class="takepicture" (click)="TakePhotos()" name="camera" color="hk-red"></ion-icon> -->
+      <ion-icon class="takepicture" (click)="TakePhotos()" name="camera" color="hk-red"></ion-icon>
     </ion-item>
 
     <div *ngIf="isArrived">
