--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -61,9 +61,9 @@
 
   <div class="container" padding>
     <div class="scroll" scrollX="true">
-      <img style="width: 100%; border-radius: 5px 5px 5px 5px;" (click)="NavRouterMenu(X)"
-        src="../../assets/images/img-XX1.png" /> <span style="padding-left: 10px;"> </span>
-      <img style="width: 80%; border-radius: 5px 5px 5px 5px;" (click)="NavRouterMenu(6)" src="{{ akhlakImage }}" />
+      <!-- <img style="width: 100%; border-radius: 5px 5px 5px 5px;" (click)="NavRouterMenu(X)"
+        src="../../assets/images/img-XX1.png" /> <span style="padding-left: 10px;"> </span> -->
+      <img style="width: 100%; border-radius: 5px 5px 5px 5px;" (click)="NavRouterMenu(1)" src="{{ akhlakImage }}" />
     </div>
   </div>
 
@@ -83,6 +83,12 @@
 </ion-content>
 
 <ion-footer no-border color="translucent">
+  <div class="ion-text-center">
+    <ion-button size="small" shape="round" mode="md" (click)="DoRefresh()">
+      <ion-icon name="arrow-up" mode="md"></ion-icon> Refresh
+    </ion-button>
+  </div>
+
   <ion-toolbar style="--background: #f0f0f0;">
     <ion-card>
       <ion-item lines="none" color="translucent">
