--- a/src/app/pages/new-activity/new-activity.page.html
+++ b/src/app/pages/new-activity/new-activity.page.html
@@ -3,7 +3,8 @@
     <ion-buttons slot="start">
       <ion-back-button color="hk-white-red"></ion-back-button>
     </ion-buttons>
-    <ion-title>Add Activity</ion-title>
+    <ion-title *ngIf="isArrived">Add Activity</ion-title>
+    <ion-title *ngIf="!isArrived">Isi Cerita AKHLAK</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -18,139 +19,166 @@
         {{txtTimeRequest}}
       </ion-item>
 
-      <ion-item Lines="full">
-        <ion-input type="text" placeholder="Suhu badan hari ini" [(ngModel)]="txtTemperature" name="txtTemperature"
-          type="number" required no-padding>
-        </ion-input>
-        <ion-label position="end">Celcius</ion-label>
-      </ion-item>
-
-      <ion-item Lines="full">
-        <ion-label class="ion-text-wrap">
-          Berinteraksi dengan ODP/PDP/Pasien Terkonfirmasi Positif COVID-19
-          <p></p>
-          <ion-text style="font-size: 12px ;">(dalam 14 hari terakhir)</ion-text>
-        </ion-label>
-        <ion-toggle [(ngModel)]="isInteraksi" slot="end"></ion-toggle>
-      </ion-item>
-
-      <ion-item Lines="full">
-        <ion-label class="ion-text-wrap">
-          Pernah mengalami demam / batuk / pilek / sakit tenggorokan / sesak
-          <p></p>
-          <ion-text style="font-size: 12px ;">(dalam 14 hari terakhir)</ion-text>
-        </ion-label>
-        <ion-toggle [(ngModel)]="isRiwayatSakit" slot="end"></ion-toggle>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Kendaraan ke area kerja</ion-label>
-        <ion-select mode="ios" [(ngModel)]="kendaraan">
-          <ion-select-option value="Jalan kaki" selected>Jalan kaki</ion-select-option>
-          <ion-select-option value="Kendaraan umum">Kendaraan umum</ion-select-option>
-          <ion-select-option value="Kendaraan pribadi">Kendaraan pribadi</ion-select-option>
-          <ion-select-option value="Car pooling">Car pooling</ion-select-option>
-        </ion-select>
-      </ion-item>
-
-      <ion-item Lines="full">
-        <ion-label>Adakah rencana keluar</ion-label>
-        <ion-toggle [(ngModel)]="isOutPlan" slot="end"></ion-toggle>
-      </ion-item>
-
-      <ion-item Lines="full">
-        <ion-label>Bertemu pihak eksternal</ion-label>
-        <ion-toggle [(ngModel)]="isExternal" slot="end"></ion-toggle>
-      </ion-item>
-
-      <ion-item Lines="full">
-        <ion-label>Ada keluarga sakit</ion-label>
-        <ion-toggle [(ngModel)]="isFamilyMemberSick" slot="end" (ionChange)="IsFamilyMemberSick()"></ion-toggle>
-      </ion-item>
-
-      <div *ngIf="isFamilyMemberSick">
+      <div *ngIf="isArrived">
         <ion-item Lines="full">
-          <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan" name="txtHubungan"
-            required>
+          <ion-input type="text" placeholder="Suhu badan hari ini" [(ngModel)]="txtTemperature" name="txtTemperature"
+            type="number" required no-padding>
           </ion-input>
+          <ion-label position="end">Celcius</ion-label>
         </ion-item>
 
         <ion-item Lines="full">
-          <ion-input type="text" placeholder="Usia" [(ngModel)]="txtUsia" name="txtUsia" required>
-          </ion-input>
+          <ion-label class="ion-text-wrap">
+            Berinteraksi dengan ODP/PDP/Pasien Terkonfirmasi Positif COVID-19
+            <p></p>
+            <ion-text style="font-size: 12px ;">(dalam 14 hari terakhir)</ion-text>
+          </ion-label>
+          <ion-toggle [(ngModel)]="isInteraksi" slot="end"></ion-toggle>
         </ion-item>
 
         <ion-item Lines="full">
-          <ion-input type="text" placeholder="Sakit/Deskripsi" [(ngModel)]="txtSickDesc" name="txtSickDesc" required>
-          </ion-input>
+          <ion-label class="ion-text-wrap">
+            Pernah mengalami demam / batuk / pilek / sakit tenggorokan / sesak
+            <p></p>
+            <ion-text style="font-size: 12px ;">(dalam 14 hari terakhir)</ion-text>
+          </ion-label>
+          <ion-toggle [(ngModel)]="isRiwayatSakit" slot="end"></ion-toggle>
         </ion-item>
 
-        <ion-item *ngIf="!isFamilyMemberSick2" Lines="full" (click)="AddFamilyMemberSick2()">
-          <ion-label color="hk-red">Add Member Familly</ion-label>
+        <ion-item>
+          <ion-label>Kendaraan ke area kerja</ion-label>
+          <ion-select mode="ios" [(ngModel)]="kendaraan">
+            <ion-select-option value="Jalan kaki" selected>Jalan kaki</ion-select-option>
+            <ion-select-option value="Kendaraan umum">Kendaraan umum</ion-select-option>
+            <ion-select-option value="Kendaraan pribadi">Kendaraan pribadi</ion-select-option>
+            <ion-select-option value="Car pooling">Car pooling</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item Lines="full">
+          <ion-label>Adakah rencana keluar</ion-label>
+          <ion-toggle [(ngModel)]="isOutPlan" slot="end"></ion-toggle>
+        </ion-item>
+
+        <ion-item Lines="full">
+          <ion-label>Bertemu pihak eksternal</ion-label>
+          <ion-toggle [(ngModel)]="isExternal" slot="end"></ion-toggle>
+        </ion-item>
+
+        <ion-item Lines="full">
+          <ion-label>Ada keluarga sakit</ion-label>
+          <ion-toggle [(ngModel)]="isFamilyMemberSick" slot="end" (ionChange)="IsFamilyMemberSick()"></ion-toggle>
+        </ion-item>
+
+        <div *ngIf="isFamilyMemberSick">
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan" name="txtHubungan"
+              required>
+            </ion-input>
+          </ion-item>
+
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Usia" [(ngModel)]="txtUsia" name="txtUsia" required>
+            </ion-input>
+          </ion-item>
+
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Sakit/Deskripsi" [(ngModel)]="txtSickDesc" name="txtSickDesc" required>
+            </ion-input>
+          </ion-item>
+
+          <ion-item *ngIf="!isFamilyMemberSick2" Lines="full" (click)="AddFamilyMemberSick2()">
+            <ion-label color="hk-red">Add Member Familly</ion-label>
+          </ion-item>
+        </div>
+
+        <div *ngIf="isFamilyMemberSick && isFamilyMemberSick2">
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan2" name="txtHubungan2"
+              required>
+            </ion-input>
+          </ion-item>
+
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Usia" [(ngModel)]="txtUsia2" name="txtUsia2" required>
+            </ion-input>
+          </ion-item>
+
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Sakit/Deskripsi" [(ngModel)]="txtSickDesc2" name="txtSickDesc2"
+              required>
+            </ion-input>
+          </ion-item>
+
+          <ion-item *ngIf="!isFamilyMemberSick3" Lines="full" (click)="AddFamilyMemberSick3()">
+            <ion-label color="hk-red">Add Member Familly</ion-label>
+          </ion-item>
+        </div>
+
+        <div *ngIf="isFamilyMemberSick && isFamilyMemberSick2 && isFamilyMemberSick3">
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan3" name="txtHubungan3"
+              required>
+            </ion-input>
+          </ion-item>
+
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Usia" [(ngModel)]="txtUsia3" name="txtUsia3" required>
+            </ion-input>
+          </ion-item>
+
+          <ion-item Lines="full">
+            <ion-input type="text" placeholder="Sakit/Deskripsi" [(ngModel)]="txtSickDesc3" name="txtSickDesc3"
+              required>
+            </ion-input>
+          </ion-item>
+        </div>
+
+        <ion-item Lines="full">
+          <ion-label>Kapan Anda Terakhir Olahraga</ion-label>
+          <ion-datetime [(ngModel)]="waktuOlahraga" displayFormat="YYYY MM DD" placeholder="Select Date"></ion-datetime>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Jenis Olahraga yang Dilakukan</ion-label>
+          <ion-select mode="ios" [(ngModel)]="jenisOlahraga">
+            <ion-select-option value="Jogging/Jalan/Lari" selected>Jogging/Jalan/Lari</ion-select-option>
+            <ion-select-option value="Workout/Zumba/Yoga/Senam">Workout/Zumba/Yoga/Senam</ion-select-option>
+            <ion-select-option value="Bersepeda">Bersepeda</ion-select-option>
+            <ion-select-option value="Renang">Renang</ion-select-option>
+            <ion-select-option value="Badminton/Tenis Lapangan">Badminton/Tenis Lapangan</ion-select-option>
+            <ion-select-option value="Tenis Meja">Tenis Meja</ion-select-option>
+            <ion-select-option value="Basket/Voli">Basket/Voli</ion-select-option>
+            <ion-select-option value="Futsal/Sepak Bola">Futsal/Sepak Bola</ion-select-option>
+            <ion-select-option value="Golf">Golf</ion-select-option>
+            <ion-select-option value="Lain-Lain">Lain-Lain</ion-select-option>
+          </ion-select>
         </ion-item>
       </div>
 
-      <div *ngIf="isFamilyMemberSick && isFamilyMemberSick2">
-        <ion-item Lines="full">
-          <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan2" name="txtHubungan2"
-            required>
-          </ion-input>
+      <div *ngIf="!isArrived">
+        <ion-item>
+          <ion-label>Nilai AKHLAK Yang Dilakukan Hari Ini</ion-label>
+          <ion-select mode="ios" [(ngModel)]="valueAkhlak">
+            <ion-select-option value="Amanah" selected>Amanah</ion-select-option>
+            <ion-select-option value="Kompeten">Kompeten</ion-select-option>
+            <ion-select-option value="Harmonis">Harmonis</ion-select-option>
+            <ion-select-option value="Loyal">Loyal</ion-select-option>
+            <ion-select-option value="Adaptif">Adaptif</ion-select-option>
+            <ion-select-option value="Kolaboratif">Kolaboratif</ion-select-option>
+          </ion-select>
         </ion-item>
-
-        <ion-item Lines="full">
-          <ion-input type="text" placeholder="Usia" [(ngModel)]="txtUsia2" name="txtUsia2" required>
-          </ion-input>
-        </ion-item>
-
-        <ion-item Lines="full">
-          <ion-input type="text" placeholder="Sakit/Deskripsi" [(ngModel)]="txtSickDesc2" name="txtSickDesc2" required>
-          </ion-input>
-        </ion-item>
-
-        <ion-item *ngIf="!isFamilyMemberSick3" Lines="full" (click)="AddFamilyMemberSick3()">
-          <ion-label color="hk-red">Add Member Familly</ion-label>
-        </ion-item>
+        <div *ngIf="valueAkhlak">
+          <ion-item>
+            <ion-label>Ceritakan Bentuk Perilaku Yang Dilakukan</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-input type="text" placeholder="Tuliskan Cerita Anda" [(ngModel)]="storyAkhlak" name="storyAkhlak"
+              required>
+            </ion-input>
+          </ion-item>
+        </div>
       </div>
-
-      <div *ngIf="isFamilyMemberSick && isFamilyMemberSick2 && isFamilyMemberSick3">
-        <ion-item Lines="full">
-          <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan3" name="txtHubungan3"
-            required>
-          </ion-input>
-        </ion-item>
-
-        <ion-item Lines="full">
-          <ion-input type="text" placeholder="Usia" [(ngModel)]="txtUsia3" name="txtUsia3" required>
-          </ion-input>
-        </ion-item>
-
-        <ion-item Lines="full">
-          <ion-input type="text" placeholder="Sakit/Deskripsi" [(ngModel)]="txtSickDesc3" name="txtSickDesc3" required>
-          </ion-input>
-        </ion-item>
-      </div>
-
-      <ion-item Lines="full">
-        <ion-label>Kapan Anda Terakhir Olahraga</ion-label>
-        <ion-datetime [(ngModel)]="waktuOlahraga" displayFormat="YYYY MM DD" placeholder="Select Date"></ion-datetime>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Jenis Olahraga yang Dilakukan</ion-label>
-        <ion-select mode="ios" [(ngModel)]="jenisOlahraga">
-          <ion-select-option value="Jogging/Jalan/Lari" selected>Jogging/Jalan/Lari</ion-select-option>
-          <ion-select-option value="Workout/Zumba/Yoga/Senam">Workout/Zumba/Yoga/Senam</ion-select-option>
-          <ion-select-option value="Bersepeda">Bersepeda</ion-select-option>
-          <ion-select-option value="Renang">Renang</ion-select-option>
-          <ion-select-option value="Badminton/Tenis Lapangan">Badminton/Tenis Lapangan</ion-select-option>
-          <ion-select-option value="Tenis Meja">Tenis Meja</ion-select-option>
-          <ion-select-option value="Basket/Voli">Basket/Voli</ion-select-option>
-          <ion-select-option value="Futsal/Sepak Bola">Futsal/Sepak Bola</ion-select-option>
-          <ion-select-option value="Golf">Golf</ion-select-option>
-          <ion-select-option value="Lain-Lain">Lain-Lain</ion-select-option>
-        </ion-select>
-      </ion-item>
-
     </ion-card-content>
 
     <ion-row class="ion-align-items-center">
@@ -160,5 +188,28 @@
         </ion-button>
       </ion-col>
     </ion-row>
+  </ion-card>
+
+  <ion-card *ngIf="!isArrived">
+    <ion-item color="hk-yellow">
+      <ion-icon name="megaphone" slot="start"></ion-icon>
+      <ion-text>AKHLAK BUMN</ion-text>
+    </ion-item>
+    <div padding>
+      <ion-text>1. Amanah</ion-text> <br>
+      <ion-text><span style="margin-left: 20px">Memegang teguh kepercayaan yang diberikan</span></ion-text> <br>
+      <ion-text>2. Kompeten</ion-text> <br>
+      <span style="margin-left: 20px">Terus belajar dan mengembangkan kapabilitas</span> <br>
+      <ion-text>3. Harmonis</ion-text> <br>
+      <ion-text><span style="margin-left: 20px">Saling peduli dan menghargai perbedaan</span></ion-text> <br>
+      <ion-text>4. Loyal</ion-text> <br>
+      <ion-text><span style="margin-left: 20px">Berdedikasi dan mengutamakan kepentingan Bangsa dan Negara</span>
+      </ion-text> <br>
+      <ion-text>5. Adaptif</ion-text> <br>
+      <ion-text><span style="margin-left: 20px">Terus berinovasi dan antusias dalam menggerakkan ataupun menghadapi
+          perubahan</span></ion-text> <br>
+      <ion-text>6. Kolaboratif</ion-text> <br>
+      <ion-text><span style="margin-left: 20px">Membangun kerjasama yang sinergis</span></ion-text> <br>
+    </div>
   </ion-card>
 </ion-content>
