--- a/src/app/pages/welcome/welcome.page.scss
+++ b/src/app/pages/welcome/welcome.page.scss
@@ -35,7 +35,8 @@ ion-slide {
       }
 
       @media screen and (min-width: 768px) {
-        padding-top: 735px;
+        padding-top: 25%;
+        // padding-top: 735px;
       }
 
       @media screen and (min-width: 812px) {
@@ -43,7 +44,8 @@ ion-slide {
       }
 
       @media screen and (min-width: 928px) {
-        padding-top: 96%;
+        padding-top: 24%;
+        // padding-top: 96%;
       }
 
       @media screen and (min-width: 1024px) {
@@ -78,7 +80,8 @@ ion-slide {
   }
 
   @media screen and (min-width: 768px) {
-    height: 100%;
+    height: 50%;
+    // height: 100%;
   }
 
   @media screen and (min-width: 812px) {
@@ -86,7 +89,8 @@ ion-slide {
   }
 
   @media screen and (min-width: 928px) {
-    height: 96%;
+    height: 50%;
+    // height: 96%;
   }
 
   @media screen and (min-width: 1024px) {
