- TakePhotos hanya untuk IOS - Button refresh dihapus

--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -19,7 +19,7 @@
     <ion-item>
       <ion-input type="text" placeholder="Alasan Absen Diluar" [(ngModel)]="txtDesc" name="txtDesc" required>
       </ion-input>
-      <ion-icon class="takepicture" (click)="TakePhotos()" name="camera" color="hk-red"></ion-icon>
+      <ion-icon *ngIf="isIOS" class="takepicture" (click)="TakePhotos()" name="camera" color="hk-red"></ion-icon>
     </ion-item>
 
     <div *ngIf="isArrived">
