--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -83,11 +83,12 @@
 </ion-content>
 
 <ion-footer no-border color="translucent">
-  <div class="ion-text-center">
+  <!-- UNTUK TOMBOL REFRESH (BUTUH HILANG SAAT TURUN) -->
+  <!-- <div class="ion-text-center">
     <ion-button size="small" shape="round" mode="md" (click)="DoRefresh()">
       <ion-icon name="arrow-up" mode="md"></ion-icon> Refresh
     </ion-button>
-  </div>
+  </div> -->
 
   <ion-toolbar style="--background: #f0f0f0;">
     <ion-card>
