--- a/src/app/pages/wfowfh-planning/wfowfh-planning.page.html
+++ b/src/app/pages/wfowfh-planning/wfowfh-planning.page.html
@@ -98,7 +98,7 @@
 
 
 
-  <form (ngSubmit)="PermohonanInformasi()" [formGroup]="credentials" style="padding-left: 10%; padding-right: 10%;">
+  <!-- <form (ngSubmit)="PermohonanInformasi()" [formGroup]="credentials" style="padding-left: 10%; padding-right: 10%;">
     <div class="input-group" style="padding-top: 10px;">
       <ion-item class="border" lines="none">
         <ion-input type="text" placeholder="Nama Lengkap" formControlName="name"></ion-input>
@@ -161,6 +161,6 @@
         </ion-button>
       </ion-col>
     </ion-row>
-  </form>
+  </form> -->
 
 </ion-content>
