--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -55,7 +55,7 @@
     </ion-row>
   </ion-grid>
 
-  <div padding *ngIf="isWFOWFHPlanning">
+  <!-- <div padding *ngIf="isWFOWFHPlanning">
     <ion-text>Available : {{ jadwalPengisianWFOWFH }}</ion-text>
   </div>
 
@@ -63,7 +63,7 @@
     <div class="scroll" scrollX="true">
       <img style="border-radius: 5px 5px 5px 5px;" (click)="NavRouterMenu(7)" src="../../assets/images/img-16.png" />
     </div>
-  </div>
+  </div> -->
 
   <div padding>
     <ion-text>Greetings AKHLAK</ion-text>
