- update routing (fix error) new guard - create new form all option - 2 new guard (auto-login & welcome)

--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -32,6 +32,13 @@
       </ion-item>
 
       <ion-item Lines="full">
+        <ion-input type="text" placeholder="Suhu badan hari ini" [(ngModel)]="txtTemperature" name="txtTemperature"
+          type="number" required no-padding>
+        </ion-input>
+        <ion-label position="end">Celcius</ion-label>
+      </ion-item>
+
+      <ion-item Lines="full">
         <ion-label class="ion-text-wrap">
           Berinteraksi dengan ODP/PDP/Pasien Terkonfirmasi Positif COVID-19
           <p></p>
