--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -131,6 +131,11 @@
           </ion-row>
         </ion-grid>
         <ion-button expand="block" color="hk-red" (click)="ButtonAbsen()">ABSEN</ion-button>
+        <!-- <ion-button expand="block" color="hk-red" (click)="GetVersionNumberDB()">GetVersionNumberDB</ion-button>
+        <ion-button expand="block" color="hk-red" (click)="GetVersionNumberNative()">GetVersionNumberNative</ion-button>
+        <ion-button expand="block" color="hk-red" (click)="isLocationAvailable()">isLocationAvailable</ion-button>
+        <ion-button expand="block" color="hk-red" (click)="getCurrentPosition()">getCurrentPosition</ion-button>
+        <ion-button expand="block" color="hk-red" (click)="reverseGeocode()">reverseGeocode</ion-button> -->
         <!-- <ion-button expand="block" color="hk-red" (click)="StartLocalNotification()">Start Local Notif</ion-button> -->
         <!-- <ion-button expand="block" color="hk-red" (click)="CancelLocalNotification()">Cancel Local Notif</ion-button> -->
       </div>
