--- a/src/app/pages/leaderboards/leaderboards.page.scss
+++ b/src/app/pages/leaderboards/leaderboards.page.scss
@@ -1,3 +1,35 @@
+.content {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+
+  .leadUsername {
+    font-size: 12px;
+    font-weight: 700;
+  }
+
+  .leadDivisionName {
+    font-size: 8px;
+    font-weight: 500;
+  }
+
+  .leadCheckIn {
+    line-height: 25px;
+    font-weight: 500;
+  }
+
+  .scrollYnew {
+    overflow: auto;
+    flex-grow: 1 !important;
+  }
+
+  ion-card {
+    --background: #ffffff;
+    box-shadow: none;
+    border-radius: 20px;
+  }
+}
+
 .buttonBack {
   position: absolute;
   top: 0%;
@@ -5,35 +37,18 @@
   font-weight: bold;
 }
 
-// ion-avatar {
-//   margin: auto; margin-top: 10px;
-//   --border-radius: 100%; object-fit: cover;
-//   width: 70% !important;
-//   height: 70% !important;
-//   // max-width: 100px !important; //any size
-//   // max-height: 100px !important; //any size
+// .content {
+//   --background: none;
+//   background-image: url("../../../assets/images/bg-5.png");
+//   background-position: center top;
+//   background-repeat: no-repeat;
+//   background-size: 100%;
 // }
 
-// hr {
-//   height: 0.75px;
-//   background-color: #cecece;
-// }
-
-ion-card {
-  --background: #ffffff;
-  box-shadow: none;
-  border-radius: 20px;
-}
-
-// .ios ion-card {
-//   margin-top: 5px;
-//   margin-bottom: 5px;
-// }
-
-.content {
-  --background: none;
-  background-image: url("../../../assets/images/bg-5.png");
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-size: 100%;
+.borderSolid {
+  border-radius: 10px !important;
+  overflow: hidden !important;
+  border: 2px solid var(--ion-color-hk-white-red) !important;
+  background-color: var(--ion-color-hk-white-red); 
+  height: 100%;
 }
