fix eror ion-popover

--- a/src/app/pages/leaderboards/leaderboards.page.html
+++ b/src/app/pages/leaderboards/leaderboards.page.html
@@ -17,11 +17,11 @@
           <ion-button id="filter">
             <ion-icon slot="icon-only" name="options"></ion-icon>
           </ion-button>
-          <ion-popover trigger="filter" triggerAction="click">
+          <!-- <ion-popover trigger="filter" triggerAction="click">
             <ng-template>
               <ion-content class="ion-padding">Hello World!</ion-content>
             </ng-template>
-          </ion-popover>
+          </ion-popover> -->
         </ion-col>
       </ion-row>
 
