- update 'ng update @angular/core@13 @angular/cli@13 --force' - CSS Welcome page

--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,4 +1,4 @@
-<ion-split-pane>
+<!-- <ion-split-pane>
   <ion-menu contentId="content">
     <ion-header mode="ios">
       <div style="padding: 20px; padding-bottom: 10px; line-height: 140%; color: var(--ion-color-hk-red);">
@@ -42,4 +42,7 @@
     </ion-footer>
   </ion-menu>
   <ion-router-outlet id="content" main></ion-router-outlet>
-</ion-split-pane>
+</ion-split-pane> -->
+<ion-content>
+  <ion-router-outlet></ion-router-outlet>
+</ion-content>
