--- a/src/app/pages/welcome/welcome.page.scss
+++ b/src/app/pages/welcome/welcome.page.scss
@@ -26,13 +26,13 @@ ion-slide {
       left: 0;
       right: 0;
 
-      @media screen and (min-width: 568px) {
-        padding-top: 22%;
-      }
+      // @media screen and (min-width: 568px) {
+      //   padding-top: 22%;
+      // }
 
-      @media screen and (min-width: 640px) {
-        padding-top: 25%;
-      }
+      // @media screen and (min-width: 640px) {
+      //   padding-top: 25%;
+      // }
 
       @media screen and (min-width: 768px) {
         padding-top: 25%;
@@ -71,34 +71,34 @@ ion-slide {
   background-size: 100%;
   background-repeat: no-repeat;
 
-  @media screen and (min-width: 568px) {
-    height: 45%;
-  }
+  // @media screen and (min-width: 568px) {
+  //   height: 45%;
+  // }
 
-  @media screen and (min-width: 640px) {
-    height: 50%;
-  }
+  // @media screen and (min-width: 640px) {
+  //   height: 50%;
+  // }
 
-  @media screen and (min-width: 768px) {
-    height: 50%;
-    // height: 100%;
-  }
+  // @media screen and (min-width: 768px) {
+  //   height: 50%;
+  //   // height: 100%;
+  // }
 
-  @media screen and (min-width: 812px) {
-    height: 53%;
-  }
+  // @media screen and (min-width: 812px) {
+  //   height: 53%;
+  // }
 
-  @media screen and (min-width: 928px) {
-    height: 50%;
-    // height: 96%;
-  }
+  // @media screen and (min-width: 928px) {
+  //   height: 50%;
+  //   // height: 96%;
+  // }
 
-  @media screen and (min-width: 1024px) {
-    height: 35%;
-  }
+  // @media screen and (min-width: 1024px) {
+  //   height: 35%;
+  // }
 
-  @media screen and (min-width: 1366px) {
-    background-size: 100%;
-    height: 50%;
-  }
+  // @media screen and (min-width: 1366px) {
+  //   background-size: 100%;
+  //   height: 50%;
+  // }
 }
